minor man page changes

--- a/rubin.1
+++ b/rubin.1
@@ -42,15 +42,15 @@ Although \*[sweref99] is slowly replacing it, lots of
 existing data is expressed in that system.
 .PP
 An \*[rt90] coordinate comes with a north and an east part,
-and 4-, 5-, 6- or 7-digit format
-(1km; 100m; 10m; 1m).
+and 4-, 5-, 6- or 7-digit format, for example:
 .IP
-.nf
-6441\ 1362
-64415\ 13628
-644159\ 136283
-6441593\ 1362839
-.fi
+.TS
+l ri .
+6448\ 1370	1 km
+64487\ 13703	100 m
+644879\ 137035	10 m
+6448794\ 1370358	1 m
+.TE
 .PP
 The original intention was most likely that the coordinate would identify
 a square, with the coordinate sitting in the southwest corner.
@@ -59,7 +59,7 @@ a circle; in that case the 7-digit, 1m-resolution form is used,
 and with some luck the radius of the circle is given.
 For example,
 .IP
-6441593\ 1362839 \[+-]5m
+6448794\ 1370358 \[+-]5m
 .
 .SS "\*[rubin]"
 .
