support more compact RUBIN
One of the few places listing RUBIN coordinates today,
http://ormbunkar.se/koordinater/, lists a more compact
form in their examples, compared to the 1980s examples
I've followed so far: the two leftmost groups are
joined, with no spacing:

  7D 9e 379 035
  7D9e 379 035

Support is added for this too.

--- a/rubin.1
+++ b/rubin.1
@@ -83,7 +83,7 @@ Also, the syntax does not appear to be standardized.
 in biological surveys, but in this context it's synonymous with the
 coordinate format included therein.
 It's really just a different encoding or notation for \*[rt90], designed
-(among other things) to be more compact.
+to be (among other things) more compact.
 During the 1980s it gradually fell out of use, but a lot of
 data from that time period is still encoded in \*[rubin].
 .PP
@@ -112,16 +112,18 @@ To get higher resolution, \*[rubin] divides the side of this 5\[mu]5km
 square in 5, 50, or 500 pieces to get 1km, 100m or 10m resolution.
 .IP
 .TS
-lf(CB) ri .
+lf(CB) rili .
 7D\ 9e\ ....	5 km
 7D\ 9e\ 3-0-	1 km
 7D\ 9e\ 3.0.
 7D\ 9e\ 3703	100 m
 7D\ 9e\ 37\ 03
 7D\ 9e\ 379\ 035	10 m
+7D9e\ 379035		more compact form
 .TE
 .PP
-These are the notations I have seen.
+These are the notations I have seen, but my sources are few and mostly
+early.
 Note the variant spacings and paddings.  Apparently a kilometer-resolution
 coordinate is never given as
 7D\ 9e\ 30,
@@ -143,6 +145,7 @@ ll li.
 644879 137035	7D 9e 379 035
 69329 15909	17H 6i 2909	Hammermyran, Medelpad
 693292 159095	17H 6i 292 095
+693292 159095	17H6i 292 095
 .TE
 .
 .
@@ -171,3 +174,5 @@ Svensk Botanisk Tidskrift 73 (6).
 \(:Osterdahl, L. (1976),
 .IR "RUBIN (Rutin f\(:or biologiska inventeringar), Huvudmanual" .
 Biodata, Riksmuseum.
+.HP
+.I \[fo]http://ormbunkar.se/koordinater/\[fc]
